# cube_stack_env

./: CMakeLists.txt  README.md  package.xml
cad/pincher-robot/: Sketch1.SLDBLK  box.SLDPRT  box.STL  cube_15mm.stl  cube_20mm.stl  cube_25mm.stl  cube_50mm.stl  f2Bracket.SLDPRT  f3Bracket.SLDPRT  f3Bracketspacer.SLDPRT  f3Bracketspacer.STL  f4Bracket.SLDPRT  f4Bracket_ugnx.prt  f4Bracket_ugnx.stl  f8Bracket.SLDPRT  finger_arm.SLDPRT  finger_arm.STL  fingerarm.SLDASM  leftFinger.SLDPRT  pararelGrip.SLDPRT  revereseBracketBottom.SLDPRT  revereseBracketBottomthickened.SLDPRT  revereseBracketBottomthickened.STL  thinSpacer.SLDPRT  upperDeck.SLDPRT
cad/pincher-robot/STL/: f2Bracket.STL  f3Bracket need 3 copies.STL  f4Bracket need 2 copies.STL  f8Bracket.STL  leftFinger need 2 copies.STL  pararelGrip.STL  revereseBracketBottom.STL  thinSpacer.STL  upperDeck.STL
config/: cube_stack_arm_control.yaml
cube_stack_arm_ikfast_plugin/: CMakeLists.txt  cube_stack_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
cube_stack_arm_ikfast_plugin/src/: cube_stack_arm_ikfast_moveit_plugin.cpp  cube_stack_arm_ikfast_solver.cpp
cube_stack_env/: CMakeLists.txt  package.xml
cube_stack_env/config/: cube_stack_arm_control.yaml
cube_stack_env/demonstrations/: sample.traj
cube_stack_env/launch/: arm_hardware.launch  cube_stack.launch  cube_stack_gazebo.launch  cube_stack_moveit.launch  cube_stack_moveit_hardware.launch
cube_stack_env/models/wood_cube_2_5cm_blue/: model.config  model.rsdf  model.sdf
cube_stack_env/models/wood_cube_2_5cm_red/: model.config  model.rsdf  model.sdf
cube_stack_env/msg/: SyncSetPositions.msg
cube_stack_env/rviz/: arm_hardware.rviz  cube_world_moveit.rviz
cube_stack_env/scripts/: cube_stack_env.py  env_test.py  expert_traj_moveit.py  moveit_handler.py  moveit_handler_hardware.py  pick_n_place.py  rl_main.py
cube_stack_env/scripts/LfD/: airl_moveit.py  airl_sac.py  bc_moveit.py  bc_sac.py  gail_moveit.py  gail_sac.py
cube_stack_env/src/: roboarm_custom_commander.cpp  roboarm_custom_controller.cpp  roboarm_hardware_interface.cpp
cube_stack_env/urdf/: cube_stack_arm.xacro
cube_stack_env/urdf/motion_planning/: cube_stack.urdf
cube_stack_env/urdf/turtlebot_arm/: arm_hardware.xacro  pincher_gripper.xacro
cube_stack_env/worlds/: cube.world  obstacle_sphere.sdf
cube_stack_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
cube_stack_moveit_config/config/: cube_stack_arm.srdf  fake_controllers.yaml  gazebo_cube_stack_arm.urdf  joint_limits.yaml  kinematics.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml
cube_stack_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
launch/: arm_hardware.launch  cube_stack.launch  cube_stack_moveit.launch
rviz/: arm_hardware.rviz  cube_world.rviz  cube_world_moveit.rviz  frame_debug.rviz
scripts/: cube_stack_env.py  env_controller.py  env_test.py  expert_traj_moveit.py  learner.py  moveit_handler.py  rl_main.py  tests.py
src/: roboarm_controller.cpp
srv/: SyncGetPositions.srv
urdf/: cube_stack_arm.xacro  sensors.xacro
urdf/motion_planning/: cube_stack.urdf
urdf/turtlebot_arm/: arm_hardware.xacro  pincher_gripper.xacro  tbarm.xacro  turtlebot_arm.xacro  turtlebot_gripper.xacro
worlds/: cube.world  cube_obstacle.world
