<?xml version="1.0"?>
<package format="2">
  <name>cube_stack_env</name>
  <version>0.0.0</version>
  <description>The cube_stack_env package</description>

  <maintainer email="prath4@asu.edu">Prabin Kumar Rath</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_grasp_plugin</exec_depend>
  <exec_depend>rqt_joint_trajectory_controller</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>dynamixel_sdk</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
